# dotenv

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE.md  README.md  build.sh
.github/workflows/: ci.yml  release.yml
cmake/: dotenvConfig.cmake.in
example/: main.cpp
include/dotenv/: dotenv.hpp
tests/: DotenvTest.cpp
